--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
+# Eclipse Project/Workspace files
+**/.cproject
+**/.project
+**/.metadata
+**/.settings
+**/RemoteSystemsTempFiles
+Packages
+
+# Toolchin output
 **/_obj
 **/_out
