--- a/ZeroGecko/gpiointerrupt_freertos/makefile
+++ b/ZeroGecko/gpiointerrupt_freertos/makefile
@@ -1,6 +1,6 @@
 # ----- Configuration ----------------------------------------------------------
 
-include config.mk
+include ../config.mk
 
 SRCDIR = src
 
@@ -42,4 +42,4 @@ LDFLAGS += --specs=nosys.specs
 
 # ----- Rules ------------------------------------------------------------------
 
-include rules.mk
+include ../rules.mk
