Update make structure

--- a/sleep/makefile
+++ b/sleep/makefile
@@ -1,26 +1,24 @@
 # ----- Configuration ---------------------------------------------------------
 
-include config.mk
-
 PROJECT_NAME = sleep
 
-# ----- Sources ---------------------------------------------------------------
+# ----- Source code------------------------------------------------------------
 
 include sdk.mk
 
 # SYMBOLS += NDEBUG
 
-INCLUDES += ../libs
-SOURCES += $(wildcard ../libs/xXx/support/*.cpp)
-SOURCES += $(wildcard ../libs/xXx/utils/*.cpp)
+INCLUDE_DIRS += ../libs
+SOURCE_FILES += $(wildcard ../libs/xXx/support/*.cpp)
+SOURCE_FILES += $(wildcard ../libs/xXx/utils/*.cpp)
 
-INCLUDES += src
-INCLUDES += src/config
-SOURCES += $(wildcard src/*.cpp)
+INCLUDE_DIRS += src
+INCLUDE_DIRS += src/config
+SOURCE_FILES += $(wildcard src/*.cpp)
 
 # ----- Libraries -------------------------------------------------------------
 
-LIBS += arm_cortexM0l_math
+LIBRARIES += arm_cortexM0l_math
 
 # ----- Flags -----------------------------------------------------------------
 
@@ -28,17 +26,21 @@ GCCFLAGS += -march=armv6-m
 GCCFLAGS += -mtune=cortex-m0plus
 GCCFLAGS += -mthumb
 
-COMMON = -Og -g -fdata-sections -ffunction-sections -fno-exceptions -fno-unwind-tables -fno-builtin
+COMMON_CFLAGS += -Og
+COMMON_CFLAGS += -g
+COMMON_CFLAGS += -fdata-sections
+COMMON_CFLAGS += -ffunction-sections
+COMMON_CFLAGS += -fno-builtin
+COMMON_CFLAGS += -fno-exceptions
+COMMON_CFLAGS += -fno-unwind-tables
 
-CFLAGS += $(COMMON)
 CFLAGS += -std=gnu11
 
-CXXFLAGS += $(COMMON)
 CXXFLAGS += -std=gnu++14
 CXXFLAGS += -fno-rtti
 CXXFLAGS += -fno-threadsafe-statics
 
-# CPPFLAGS +=
+CPPFLAGS +=
 
 LDFLAGS += --specs=nano.specs
 LDFLAGS += --specs=nosys.specs
