Define toolchain prefix

--- a/sleep/makefile
+++ b/sleep/makefile
@@ -48,4 +48,6 @@ LDFLAGS += -Wl,--gc-sections
 
 # ----- Rules -----------------------------------------------------------------
 
+TOOLCHAIN_PREFIX = arm-none-eabi-
+
 include ../libs/xXx/utils/rules.mk
