Use new simplified arduino like task

--- a/sleep/makefile
+++ b/sleep/makefile
@@ -10,6 +10,7 @@ include sdk.mk
 SYMBOLS += NDEBUG
 
 INCLUDE_DIRS += ../libs
+SOURCE_FILES += $(wildcard ../libs/xXx/os/*.cpp)
 SOURCE_FILES += $(wildcard ../libs/xXx/support/*.cpp)
 SOURCE_FILES += $(wildcard ../libs/xXx/utils/*.cpp)
 
