--- a/sleep/makefile
+++ b/sleep/makefile
@@ -28,25 +28,16 @@ GCCFLAGS += -march=armv6-m
 GCCFLAGS += -mtune=cortex-m0plus
 GCCFLAGS += -mthumb
 
-COMMON_CFLAGS += -fdata-sections
-COMMON_CFLAGS += -ffunction-sections
-COMMON_CFLAGS += -fno-builtin
-COMMON_CFLAGS += -fno-exceptions
-COMMON_CFLAGS += -fno-unwind-tables
 COMMON_CFLAGS += -g
 COMMON_CFLAGS += -Og
 
 CFLAGS += -std=gnu11
 
 CXXFLAGS += -std=gnu++14
-CXXFLAGS += -fno-rtti
-CXXFLAGS += -fno-threadsafe-statics
 
 CPPFLAGS +=
 
-LDFLAGS += --specs=nano.specs
-LDFLAGS += --specs=nosys.specs
-LDFLAGS += -Wl,--gc-sections
+LDFLAGS += 
 
 # ----- Rules -----------------------------------------------------------------
 
