--- a/sleepwithinterrupt/makefile
+++ b/sleepwithinterrupt/makefile
@@ -7,7 +7,7 @@ PROJECT_NAME     = sleep
 
 include sdk.mk
 
-SYMBOLS += NDEBUG
+# SYMBOLS += NDEBUG
 
 INCLUDE_DIRS += ../libs
 SOURCE_FILES += $(wildcard ../libs/xXx/os/*.cpp)
@@ -20,7 +20,7 @@ SOURCE_FILES += $(wildcard src/*.cpp)
 
 # ----- Libraries -------------------------------------------------------------
 
-LIBRARIES += arm_cortexM0l_math
+# LIBRARIES += arm_cortexM0l_math
 
 # ----- Flags -----------------------------------------------------------------
 
@@ -28,25 +28,16 @@ GCCFLAGS += -march=armv6-m
 GCCFLAGS += -mtune=cortex-m0plus
 GCCFLAGS += -mthumb
 
-COMMON_CFLAGS += -fdata-sections
-COMMON_CFLAGS += -ffunction-sections
-COMMON_CFLAGS += -fno-builtin
-COMMON_CFLAGS += -fno-exceptions
-COMMON_CFLAGS += -fno-unwind-tables
 COMMON_CFLAGS += -g
 COMMON_CFLAGS += -Og
 
 CFLAGS += -std=gnu11
 
 CXXFLAGS += -std=gnu++14
-CXXFLAGS += -fno-rtti
-CXXFLAGS += -fno-threadsafe-statics
 
 CPPFLAGS +=
 
-LDFLAGS += --specs=nano.specs
-LDFLAGS += --specs=nosys.specs
-LDFLAGS += -Wl,--gc-sections
+LDFLAGS += 
 
 # ----- Rules -----------------------------------------------------------------
 
